# xbm-rs

./: .bumpversion.toml  CHANGELOG.adoc  Cargo.toml  README.md  clippy.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  mirror.yaml
benches/: decode.rs  encode.rs
examples/: README.adoc  png2xbm.rs  xbm2png.rs
src/: decode.rs  encode.rs  lib.rs
tests/: decode.rs  encode.rs
tests/data/: 16x14.xbm  16x14_minified.xbm  basic.xbm  basic_lower_hex.xbm  basic_minified.xbm  hotspot.xbm  name.xbm  qr_code.xbm  width_14.xbm  width_14_minified.xbm  width_7.xbm  width_7_minified.xbm  without_unsigned.xbm
