# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "xbm"
version = "0.1.3"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.70.0"
description = "XBM encoding and decoding library"
documentation = "https://docs.rs/xbm"
readme = "README.md"
repository = "https://github.com/sorairolake/xbm-rs"
license = "Apache-2.0 OR MIT"
keywords = ["encoding", "image", "xbm"]
categories = ["multimedia::encoding", "multimedia::images"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "png2xbm"
path = "examples/png2xbm.rs"
required-features = ["image"]

[[example]]
name = "xbm2png"
path = "examples/xbm2png.rs"
required-features = ["image"]

[dependencies]
image = { version = "0.25.5", default-features = false, optional = true }
unicode-ident = "1.0.14"

[dev-dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
indoc = "2.0.5"

[features]
default = ["image"]
image = ["dep:image"]

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
