# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "xbm"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
description = "XBM encoding and decoding library"
documentation = "https://docs.rs/xbm"
repository = "https://github.com/sorairolake/xbm-rs"
license = "Apache-2.0 OR MIT"
keywords = ["encoding", "image", "xbm"]
categories = ["multimedia::encoding", "multimedia::images"]
include = ["/LICENSES", "/README.md", "/src"]

[[example]]
name = "png2xbm"
required-features = ["image"]

[[example]]
name = "xbm2png"
required-features = ["image"]

[dependencies]
image = { version = "0.25.8", default-features = false, optional = true }
unicode-ident = "1.0.19"

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
indoc = "2.0.7"

[features]
default = ["image"]
image = ["dep:image"]

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
